# HUST_CSE_TFTP_Client

./: CMakeLists.txt  def.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md  resources.qrc  ui_mainwindow.h  util.cpp  util.h
Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Release/.cmake/api/v1/reply/: cache-v2-e05be5583f550c254cb2.json  cmakeFiles-v1-45c630ecf424b95b4e35.json  codemodel-v2-dbae7c8b9615449cd122.json  index-2023-10-06T08-54-56-0309.json  target-socket-Release-15426c8564dc09bb414d.json  target-socket_autogen-Release-9b6c376b9749e05c4174.json  target-socket_autogen_timestamp_deps-Release-6e115d0aab1537303849.json
Release/.qt/: QtDeploySupport.cmake
Release/socket_autogen/: deps
Release/socket_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d  qrc_resources.cpp
